--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,16 +1,2 @@
-spring.application.name=auth
 
-eureka.client.register-with-eureka=true
-eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
-
-server.port=1113
-spring.redis.host=www.tanyi.lol
-spring.redis.port=6379
-spring.redis.password=
-spring.redis.database=0
-
-
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://www.tanyi.lol:3306/auth?useSSL=false
-spring.datasource.password=123456
+spring.profiles.active=test
