--- a/eureka/src/main/resources/application-dev.properties
+++ b/eureka/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 spring.application.name=eureka
-
+management.port=1001
+management.security.enabled=false
 server.port=1111
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
