--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -7,7 +7,13 @@ info.description="@project.description@"
 info.version="@project.version@"
 info.spring-boot-version="@project.parent.version@"
 
+encrypt.key=configserver
+
+#eureka
+eureka.client.register-with-eureka=true
+eureka.instance.prefer-ip-address=true
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 #config
 spring.cloud.config.server.git.uri=https://github.com/745819123/tscdome
-spring.cloud.config.server.git.search-paths=/config-repo
+spring.cloud.config.server.git.search-paths=/configs/{application}
