--- a/configs/admin-server/application-test.properties
+++ b/configs/admin-server/application-test.properties
@@ -1,5 +1,5 @@
 spring.application.name=admin-server
-server.port=1311
+server.port=${random.int(1000,9999)}
 
 management.security.enabled=false
 spring.boot.admin.context-path=/sba
