--- a/configs/auth/application-test.properties
+++ b/configs/auth/application-test.properties
@@ -1,16 +1,25 @@
 spring.application.name=auth
-
-eureka.client.register-with-eureka=true
-eureka.client.serviceUrl.defaultZone=http://localhost:1113/eureka/
-
 server.port=${random.int(1000,9999)}
 
+management.security.enabled=false
+info.name="@project.name@"
+info.description="@project.description@"
+info.version="@project.version@"
+info.spring-boot-version="@project.parent.version@"
+
+#eureka
+eureka.client.register-with-eureka=true
+eureka.instance.prefer-ip-address=true
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+
+
+#redis
 spring.redis.host=www.tanyi.lol
 spring.redis.port=6379
 spring.redis.password=
 spring.redis.database=0
 
-
+#mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://www.tanyi.lol:3306/auth?useSSL=false
