--- a/configs/auth/application-prod.properties
+++ b/configs/auth/application-prod.properties
@@ -1,17 +1,8 @@
-spring.application.name=auth
-server.port=${random.int(1000,9999)}
-
-management.security.enabled=false
+#info
 info.name="@project.name@"
 info.description="@project.description@"
 info.version="@project.version@"
 info.spring-boot-version="@project.parent.version@"
-
-#eureka
-eureka.client.register-with-eureka=true
-eureka.instance.prefer-ip-address=true
-eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
-
 
 #redis
 spring.redis.host=www.tanyi.lol
