--- a/auth/src/main/resources/application-prod.properties
+++ b/auth/src/main/resources/application-prod.properties
@@ -1,17 +1,9 @@
 spring.application.name=auth
-
-eureka.client.register-with-eureka=true
-eureka.client.serviceUrl.defaultZone=http://localhost:1112/eureka/
-
 server.port=${random.int(1000,9999)}
 
-spring.redis.host=www.tanyi.lol
-spring.redis.port=6379
-spring.redis.password=
-spring.redis.database=0
+management.security.enabled=false
 
-
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://www.tanyi.lol:3306/auth?useSSL=false
-spring.datasource.password=123456
+#eureka
+eureka.client.register-with-eureka=true
+eureka.instance.prefer-ip-address=true
+eureka.client.serviceUrl.defaultZone=http://localhost:1112/eureka/
