--- a/eureka/src/main/resources/application-prod.properties
+++ b/eureka/src/main/resources/application-prod.properties
@@ -1,7 +1,16 @@
 spring.application.name=eureka
-
 server.port=1112
+
+management.security.enabled=false
+
+info.app.name="@project.name@"
+info.app.description="@project.description@"
+info.app.version="@project.version@"
+info.app.spring-boot-version="@project.parent.version@"
+
+#eureka
 eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
