--- a/admin-server/src/main/resources/application-dev.properties
+++ b/admin-server/src/main/resources/application-dev.properties
@@ -4,12 +4,13 @@ server.port=1311
 management.security.enabled=false
 spring.boot.admin.context-path=/sba
 
-info.name="@project.name@"
-info.description="@project.description@"
-info.version="@project.version@"
-info.spring-boot-version="@project.parent.version@"
-
 #eureka
 eureka.client.register-with-eureka=true
 eureka.instance.prefer-ip-address=true
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+
+#config
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceid=config-server
+spring.cloud.config.profile=dev
+spring.cloud.config.label=master
