--- a/configs/admin-server/application-prod.properties
+++ b/configs/admin-server/application-prod.properties
@@ -1,1 +1,5 @@
 
+info.name="@project.name@"
+info.description="@project.description@"
+info.version="@project.version@"
+info.spring-boot-version="@project.parent.version@"
