--- a/admin-server/src/main/resources/application-dev.properties
+++ b/admin-server/src/main/resources/application-dev.properties
@@ -10,7 +10,8 @@ eureka.instance.prefer-ip-address=true
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 #config
-spring.cloud.config.discovery.enabled=true
-spring.cloud.config.discovery.serviceid=config-server
+#spring.cloud.config.discovery.enabled=true
+#spring.cloud.config.discovery.serviceid=config-server
+spring.cloud.config.uri=http://192.168.0.109:1411/
 spring.cloud.config.profile=dev
 spring.cloud.config.label=master
