--- a/auth/src/main/resources/application-dev.properties
+++ b/auth/src/main/resources/application-dev.properties
@@ -7,3 +7,7 @@ management.security.enabled=false
 eureka.client.register-with-eureka=true
 eureka.instance.prefer-ip-address=true
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+
+spring.cloud.config.uri=http://192.168.0.109:1411/
+spring.cloud.config.profile=dev
+spring.cloud.config.label=master
