--- a/rabbitdemo/src/main/resources/application.properties
+++ b/rabbitdemo/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.rabbitmq.host = www.tanyi.lol
 spring.rabbitmq.port=5672
 spring.rabbitmq.username = springcloud
 spring.rabbitmq.password=123456
+spring.rabbitmq.listener.simple.concurrency=100
